fix(docs): increase top gap on content columns to su24

--- a/packages/stacks-docs-next/src/app.css
+++ b/packages/stacks-docs-next/src/app.css
@@ -155,7 +155,7 @@ h1 {
 
 .layout-root > main,
 .layout-toc {
-    margin-top: var(--su16);
+    margin-top: var(--su24);
 }
 
 .layout-nav {
